# oauth-https-proxy

./: .env.echo-stateless  .env.example  .gitignore  .gitmodules  ACTUAL_CLAUDE_MCP_CONNECTION.md  CERT_LIST_DISCREPANCY_REPORT.md  CLAUDE.md  COMPLETE_CLAUDE_HTTP_REQUESTS.md  COMPLETE_OAUTH_MCP_FLOW.md  COMPREHENSIVE_OAUTH_FIXES_2025_08_29.md  CORRECTED_CLAUDE_HTTP_FLOW.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  FIX_LOGGING_PLAN.md  IMPLEMENTATION_PLAN.md  LOGGING_ENHANCEMENTS.md  MANIFEST.in  MCP_CLAUDE_CONNECTION_FLOW.md  MERGED_TABS_UPDATE.md  MIGRATION-docker-socket-proxy.md  OAUTH_APP_LOGS_BY_IP_IMPLEMENTATION.md  OAUTH_DEBUG_SUMMARY.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_MCP_FIXES_SUMMARY.md  OAUTH_SIMPLIFICATION_PLAN.md  OAUTH_TOKEN_DEBUG_FINDINGS.md  ORPHANED_RESOURCE_PREVENTION.md  README.md  ROOT_CAUSE_ANALYSIS_COMPLETE.md  ROOT_CAUSE_FOUND.md  SECURITY_INCIDENT_2025-07-18.md  SETTINGS_TAB_FIX.md  SETTINGS_VERIFICATION_REPORT.md  TESTING_REPORT.md  UNIFIED_ARCHITECTURE_PLAN.md  UNIFIED_DOCKER_COMPOSE.md  UNIFIED_STORAGE_ARCHITECTURE.md  UNIFIED_STORAGE_IMPLEMENTATION_PLAN.md  UNIFIED_STORAGE_MIGRATION_PLAN.md  URL_ONLY_ROUTING.md  (+58 more)
acme_certmanager/: __init__.py  acme_client.py  async_acme.py  auth.py  hypercorn_multi_cert.py  manager.py  models.py  oauth_status.py  proper_sni_server.py  proxy_app.py  proxy_handler.py  proxy_handler_v2.py  resource_registry.py  routes.py  scheduler.py  server.py  storage.py  unified_dispatcher.py
acme_certmanager.egg-info.old/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
acme_certmanager.old/: acme_client.py  async_acme.py  manager.py  multi_cert_server.py  multi_instance_server.py  multi_ssl_server.py  proxy_handler.py  scheduler.py  server.py  sni_server.py  ssl_server.py
acme_certmanager/static/: app.js  index.html  styles.css  test.html
contexts/: .gitkeep
contexts/fast-echo/: README.md  pyproject.toml  server.py
dockerfiles/: .gitkeep  fast-echo.dockerfile  mcp-simple.dockerfile
docs/: CONFIGURABLE_AUTH.md  _config.yml  _toc.yml  api-reference.md  architecture.md  async_implementation_summary.md  async_redis_migration_guide.md  async_testing_report.md  deployment.md  development.md  docker-service-architecture.md  docker-service-security-example.md  docker-setup-guide.md  environment-urls-explained.md  getting-started.md  index.md  multi-domain-cert-plan.md  per-proxy-routes.md  proxy-resource-commands.md  references.bib  troubleshooting.md  x-hackerone-research-implementation.md
mcp-everything/: Dockerfile  tsconfig.json
mcp-http-echo-server/: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
mcp-http-echo-server/src/mcp_http_echo_server/: __init__.py  __main__.py  server.py  session_manager.py
mcp-http-echo-server/src/mcp_http_echo_server/tools/: __init__.py  auth_tools.py  debug_tools.py  echo_tools.py  state_tools.py  system_tools.py
mcp-http-echo-server/src/mcp_http_echo_server/utils/: __init__.py  jwt_decoder.py  state_adapter.py
mcp-http-validator/: .env.example  .gitignore  LICENSE  README.md  integrate_generic_flow.py  pixi.toml  pyproject.toml  test_generic_flow.py  test_network.py
mcp-http-validator/examples/: auto_discovery.py  oauth_flow_test.py  programmatic_registration.py  test_automated_auth.py  test_rfc7591.py  test_rfc8707.py  token_management.py  validate_server.py  validate_with_token.py
mcp-http-validator/src/mcp_http_validator/: __init__.py  base_validator.py  cli.py  cli_oauth_grants.py  compliance.py  enhanced_oauth_flow.py  env_manager.py  generic_oauth_flow.py  grant_validator.py  models.py  network_utils.py  oauth.py  oauth_flow_config.py  oauth_helpers.py  oauth_tests.py  protocol_tests.py  rfc7591.py  rfc8414.py  rfc8707.py  sse_client.py  tool_tests.py  transport_detector.py  validator.py
mcp-http-validator/tests/: __init__.py  test_env_manager.py  test_flow_command.py  test_models.py  test_rfc7591_validator.py  test_validator.py
mcp_verification_tools/: README.md  __init__.py  __version__.py  cli.py  test_debug.py  test_session_simple.py
mcp_verification_tools/core/: __init__.py  base_test.py  registry.py  runner.py
mcp_verification_tools/models/: __init__.py  config.py  test_results.py
mcp_verification_tools/reporters/: __init__.py  yaml_reporter.py
mcp_verification_tools/schemas/: generate.py
mcp_verification_tools/tests/: __init__.py
oauth-https-proxy-client/: .env.example  README.md  pyproject.toml
oauth-https-proxy-client/examples/: config.example.yml  usage_examples.sh
scripts/: MCP_TESTING.md  actual_login_test.py  add_js_debug.py  analyze_logs.py  browser_debug_instructions.md  bulk_route_delete.py  cert_coverage.py  cert_create.py  cert_create_multi.py  cert_create_wildcard.py  cert_delete.py  cert_list.py  cert_renew.py  cert_show.py  cert_status.py  cert_to_production.py  check_admin_email.py  check_admin_token_status.py  check_browser_console.py  check_cert_issuer.py  check_cert_status.py  check_cloudflare_oauth_client.py  check_dom_manipulation.py  check_gui_cert.py  check_gui_javascript_behavior.py  check_hypercorn.py  check_oauth_client.py  check_orphaned_resources.py  check_redis_keys.py  check_route_ownership.py  check_storage_methods.py  clean_all_proxies.py  clean_test_data.py  cleanup-old-logs.sh  cleanup_all.py  cleanup_legacy_logging.py  cleanup_localhost_configs.py  cleanup_orphaned_certs.py  cleanup_orphaned_proxies.py  cleanup_routes.sh  (+235 more)
src/: CLAUDE.md  __init__.py  app.py  main.py
src/api/: CLAUDE.md  async_init.py  auth.py  auth_middleware.py  auth_utils.py  (+4 more)
tests/: README_MCP_TESTS.md  __init__.py  conftest.py  test_async_architecture.py  test_auth_config.py  test_auth_exclusions.py  test_certificates.py  test_challenge_endpoint.py  test_docker_services.py  test_flexible_auth.py  test_health.py  test_instances.py  test_integration.py  test_mcp.py  test_mcp_client.py  test_mcp_echo_server.py  test_mcp_integration.py  test_mcp_tools.py  test_oauth.py  test_proxy.py  test_proxy_protocol_compliance.py  test_real_acme.py  test_routes.py  test_tokens.py  test_unified_storage.py
(+277 files in other folders)
