[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acme-certmanager"
version = "0.1.0"
description = "Pure Python HTTPS server with automatic ACME certificate management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ACME CertManager Team", email = "admin@example.com"},
]
keywords = ["acme", "letsencrypt", "https", "tls", "certificate", "ssl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
]

dependencies = [
    "fastapi>=0.104.1",
    "hypercorn>=0.14.0",
    "acme>=2.8.0",
    "josepy>=1.14.0",
    "cryptography>=41.0.7",
    "redis[hiredis]>=5.0.1",
    "apscheduler>=3.10.4",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.6",
]
docs = [
    "jupyter-book>=0.15.1",
]

[project.urls]
Homepage = "https://github.com/acme-certmanager/acme-certmanager"
Documentation = "https://acme-certmanager.readthedocs.io"
Repository = "https://github.com/acme-certmanager/acme-certmanager"
Issues = "https://github.com/acme-certmanager/acme-certmanager/issues"

[project.scripts]
acme-certmanager = "acme_certmanager.server:run_server"

[tool.setuptools]
packages = ["acme_certmanager"]

[tool.setuptools.package-data]
acme_certmanager = ["py.typed"]

[tool.ruff]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
line-length = 120
target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = ["F401", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "docker: marks tests that require Docker services",
    "slow: marks tests as slow running",
    "basic: marks basic functionality tests",
    "certificates: marks certificate management tests",
    "proxy: marks proxy management tests", 
    "tokens: marks token management tests",
    "oauth: marks OAuth authentication tests",
    "routes: marks route management tests",
    "instances: marks instance management tests",
    "requires_auth: marks tests that require authentication token"
]