[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-echo-mcp"
version = "1.0.0"
description = "FastMCP Echo Server - A simple echo server using FastMCP framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "FastMCP Echo Server", email = "echo@atratest.org" }
]
dependencies = [
    "fastmcp>=0.2.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
fast-echo-server = "server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["."]